@startuml ClassDiagram_SingleRoundFeedback
title Class Diagram - Single-Round Feedback (szeroka próba, ~50-100 person, każda wypowiada się 1 raz)

skinparam classAttributeIconSize 0
skinparam linetype ortho
hide circle

enum FocusGroupStatus {
  pending
  running
  aggregating
  completed
  failed
}

class User {
  +email : string
  +encrypted_password : string
  --
  <<Devise>>
}

class Product {
  +name : string
  +description : text
  +created_at : datetime
}

class FocusGroup {
  +name : string
  +sample_size : integer
  +target_demographics : jsonb
  +status : FocusGroupStatus
  +started_at : datetime
  +completed_at : datetime
  +error_message : text
  --
  +progress() : float
  +all_agents_done?() : boolean
}

class Persona {
  +name : string
  +description : text
  +demographics : jsonb
  +traits : jsonb
}

class Opinion {
  +rating : integer
  +pros : text
  +cons : text
  +quote : text
  +raw_response : jsonb
  +status : OpinionStatus
  +error_message : text
}

class Recommendation {
  +strengths : jsonb
  +weaknesses : jsonb
  +rating_distribution : jsonb
  +segment_insights : jsonb
  +generated_at : datetime
}

class PersonaGeneratorService <<service>> {
  +call(slot_demographics) : Persona
}

class OpinionCollectorService <<service>> {
  +call(persona, product) : Opinion
}

class AggregatorService <<service>> {
  +call(focus_group) : Recommendation
}

class LlmClient <<service>> {
  +complete(prompt, schema) : jsonb
}

class RunAgentJob <<asynchronous job>> {
  +perform(focus_group_id, slot_demographics) : void
}

class CollectOpinionJob <<asynchronous job>> {
  +perform(opinion_id) : void
}

class AggregateOpinionsJob <<asynchronous job>> {
  +perform(focus_group_id) : void
}

User "1" -- "0..*" Product : creates >
User "1" -- "0..*" FocusGroup : owns >
Product "1" -- "0..*" FocusGroup : evaluated by >

FocusGroup "1" *-- "0..*" Persona
FocusGroup "1" *-- "0..*" Opinion
FocusGroup "1" *-- "0..1" Recommendation
Persona "1" -- "1" Opinion : authors >

RunAgentJob ..> PersonaGeneratorService
RunAgentJob ..> OpinionCollectorService

PersonaGeneratorService ..> LlmClient
OpinionCollectorService ..> LlmClient
AggregatorService ..> LlmClient

GeneratePersonasJob ..> PersonaGeneratorService
CollectOpinionJob ..> OpinionCollectorService
AggregateOpinionsJob ..> AggregatorService

note right of FocusGroup
  Persony tworzone są od nowa dla każdej
  sesji, tak by ich rozkład demograficzny
  (płeć, wiek, dochód itd.) odpowiadał
  proporcjom zdefiniowanym w polu
  target_demographics - np. 60% kobiet,
  40% mężczyzn (relacja kompozycji).
end note

note bottom of RunAgentJob
  Jeden job = pełen cykl życia jednego agenta:
  (1) wygenerowanie profilu Persony pasującego
  do przekazanego slotu demograficznego,
  (2) wygenerowanie opinii tej Persony o produkcie.
  Persona i Opinion zapisywane są atomowo
  na końcu joba - albo agent dostarcza pełny
  wkład, albo nic. Joby uruchamiane są
  równolegle, po jednym na każdy slot z próby.
  Po zapisie ostatniej pary system agreguje
  opinie w rekomendację.
end note

@enduml
